--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,111 +11,161 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:textSize="14sp"
+                android:text="Local"
                 android:textColor="#616161"
-                android:fontFamily="sans-serif-medium"
-                android:text="Team A" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/team_a_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:textSize="56sp"
+                android:text="0"
                 android:textColor="#000"
-                android:fontFamily="sans-serif-light"
-                android:text="0" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:onClick="addThreeForTeamA"
-                android:text="+3 Points" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:onClick="addTwoForTeamA"
-                android:text="+2 points" />
+                android:textSize="56sp" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="addOneForTeamA"
-                android:text="free throw" />
+                android:text="+1 Point" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
+                android:padding="4dp"
+                android:text="SETS"
+                android:textColor="#616161"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/localSets"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="#000"
+                android:textSize="30sp" />
 
         </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"
-            android:background="@android:color/darker_gray"/>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:fontFamily="sans-serif-medium"
+                android:padding="4dp"
+                android:text="SET"
+                android:layout_weight="1"
+                android:background="@android:color/darker_gray"
+                android:gravity="center_horizontal"
+                android:textColor="#616161"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/actualSet"
+                android:background="@android:color/darker_gray"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_horizontal"
+                android:padding="4dp"
+                android:layout_weight="2"
+                android:text="1"
+                android:textColor="#000"
+                android:textSize="36sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:textSize="14sp"
+                android:text="VISITANTE"
                 android:textColor="#616161"
-                android:fontFamily="sans-serif-medium"
-                android:text="Team B" />
+                android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/team_b_score"
+                android:id="@+id/visitScore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:textSize="56sp"
+                android:text="0"
                 android:textColor="#000"
-                android:fontFamily="sans-serif-light"
-                android:text="0" />
+                android:textSize="56sp" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="addThreeForTeamB"
-                android:text="+3 Points" />
+                android:text="+1 Point" />
 
-            <Button
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:onClick="addTwoForTeamB"
-                android:text="+2 points" />
+                android:fontFamily="sans-serif-medium"
+                android:padding="4dp"
+                android:text="SETS"
+                android:gravity="center_horizontal"
+                android:textColor="#616161"
+                android:textSize="14sp" />
 
-            <Button
+            <TextView
+                android:id="@+id/visitSets"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:onClick="addOneForTeamB"
-                android:text="free throw" />
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="#000"
+                android:textSize="30sp" />
 
         </LinearLayout>
 
@@ -124,8 +174,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="reset"
         android:layout_gravity="center"
-        android:onClick="resetScore"/>
+        android:onClick="resetScore"
+        android:text="reset" />
 
 </LinearLayout>
