--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:padding="0dp">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -75,34 +73,32 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:fontFamily="sans-serif-medium"
-                android:padding="4dp"
-                android:text="SET"
                 android:layout_weight="1"
                 android:background="@android:color/darker_gray"
+                android:fontFamily="sans-serif-medium"
                 android:gravity="center"
+                android:text="SET"
                 android:textColor="#616161"
                 android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/actualSetBox"
-                android:background="@android:color/darker_gray"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="2"
+                android:background="@android:color/darker_gray"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center"
-                android:padding="4dp"
-                android:layout_weight="2"
                 android:text="1"
                 android:textColor="#000"
                 android:textSize="36sp" />
@@ -111,9 +107,48 @@
                 android:id="@+id/winnerBox"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="3"
                 android:gravity="center"
-                android:text=""
-                android:layout_weight="5"/>
+                android:text="" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="SERVE" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/localServe"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="#00FF00" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/visitServe"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="@android:color/darker_gray" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -155,9 +190,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
                 android:padding="4dp"
                 android:text="SETS"
-                android:gravity="center_horizontal"
                 android:textColor="#616161"
                 android:textSize="14sp" />
 
