--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
-                android:padding="4dp"
                 android:text="0"
                 android:textColor="#000"
-                android:textSize="56sp" />
+                android:textSize="52sp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -52,7 +51,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
-                android:padding="4dp"
                 android:text="SETS"
                 android:textColor="#616161"
                 android:textSize="14sp" />
@@ -66,6 +64,14 @@
                 android:text="0"
                 android:textColor="#000"
                 android:textSize="30sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:onClick="timeOutForLocalTeam"
+                android:text="time out" />
 
         </LinearLayout>
 
@@ -101,7 +107,7 @@
                 android:gravity="center"
                 android:text="1"
                 android:textColor="#000"
-                android:textSize="36sp" />
+                android:textSize="34sp" />
 
             <TextView
                 android:id="@+id/winnerBox"
@@ -164,7 +170,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:text="VISITANTE"
+                android:text="VISIT"
                 android:textColor="#616161"
                 android:textSize="14sp" />
 
@@ -174,10 +180,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
-                android:padding="4dp"
                 android:text="0"
                 android:textColor="#000"
-                android:textSize="56sp" />
+                android:textSize="52sp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -191,7 +196,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
-                android:padding="4dp"
                 android:text="SETS"
                 android:textColor="#616161"
                 android:textSize="14sp" />
@@ -205,6 +209,14 @@
                 android:text="0"
                 android:textColor="#000"
                 android:textSize="30sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:onClick="timeOutForVisitTeam"
+                android:text="time out" />
 
         </LinearLayout>
 
